added some new features

--- a/index.html
+++ b/index.html
@@ -193,7 +193,14 @@
               <div class="modal-box text-center mx-auto">
                 <img class="text-center mx-auto w-[140px]" src="./images/fruit6.png" alt="">
                 <h3 class="font-extrabold text-4xl">Apple</h3>
-                <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <div class="rating rating-md mb-5">
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                </div>
                 <div class="text-center mx-auto">
                   <label for="my_modal_6" class="btn border-2 border-[#FB5559] bg-[#FB5559] text-[white]">Buy Now</label>
                   <label for="my_modal_6" class="btn border-2 border-[#FB5559]">Close!</label>
@@ -220,7 +227,14 @@
               <div class="modal-box text-center mx-auto">
                 <img class="text-center mx-auto w-[140px]" src="./images/fruit7.png" alt="">
                 <h3 class="font-extrabold text-4xl">Orange</h3>
-                <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <div class="rating rating-md mb-5">
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                </div>
                 <div class="text-center mx-auto">
                   <label for="my_modal_7" class="btn border-2 border-[#FB5559] bg-[#FB5559] text-[white]">Buy Now</label>
                   <label for="my_modal_7" class="btn border-2 border-[#FB5559]">Close!</label>
@@ -247,7 +261,14 @@
               <div class="modal-box text-center mx-auto">
                 <img class="text-center mx-auto w-[140px]" src="./images/fruit8.png" alt="">
                 <h3 class="font-extrabold text-4xl">Red Dragon</h3>
-                <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <div class="rating rating-md mb-5">
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                </div>
                 <div class="text-center mx-auto">
                   <label for="my_modal_8" class="btn border-2 border-[#FB5559] bg-[#FB5559] text-[white]">Buy Now</label>
                   <label for="my_modal_8" class="btn border-2 border-[#FB5559]">Close!</label>
@@ -274,7 +295,14 @@
               <div class="modal-box text-center mx-auto">
                 <img class="text-center mx-auto w-[140px]" src="./images/fruit9.png" alt="">
                 <h3 class="font-extrabold text-4xl">Banana</h3>
-                <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <div class="rating rating-md mb-5">
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+                </div>
                 <div class="text-center mx-auto">
                   <label for="my_modal_9" class="btn border-2 border-[#FB5559] bg-[#FB5559] text-[white]">Buy Now</label>
                   <label for="my_modal_9" class="btn border-2 border-[#FB5559]">Close!</label>
@@ -289,7 +317,7 @@
       </section>
       <!--team section started-->
       <section class="container bg-cover mx-auto relative bg-[url('./images/team.png')] w-full lg:h-[650px]  md:object-cover mt-20 mb-10 pt-24 pb-24 md:pt-15 sm:pt-6 rounded-lg">
-        <h2 class="text-center text-white font-extrabold text-5xl sm:text-2xl mt-10 mb-5">Meet the team section</h2>
+        <h2 class="text-center text-white font-extrabold lg:text-7xl md:text-5xl sm:text-2xl mt-10 mb-5">Meet the team section</h2>
         <p class="text-center text-white font-normal lg:px-80 md:px-20 sm:px-28">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
         <div class="pt-6 grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-10">
           <div class="space-y-2  border-2 border-[#F85559] p-10 text-center mx-auto">
@@ -400,7 +428,7 @@
     <footer class="bg-[#121212] py-28 text-center">
       <div class="flex justify-center items-center">
         <img class="w-[50px] h-[50px] pr-2" src="./images/logo.png" alt="">
-        <a class="text-4xl lg:text-white md:text-white sm:text-white font-bold">Fruit Brust</a>
+        <a class="text-4xl text-white lg:text-white md:text-white sm:text-white font-bold">Fruit Brust</a>
       </div>
       <ul class="flex justify-center items-center pt-10">
         <li class=" text-white mx-5 font-medium"><a class="" href="">Home</a></li>
