--- a/index.html
+++ b/index.html
@@ -148,24 +148,24 @@
       <section class="container mx-auto lg:mt-40 md:mt-20 sm:mt-20">
         <div class="flex lg:flex-row md:flex-col sm:flex-col lg:justify-between md:justify-center md:items-center sm:justify-center sm:items-center">
           <div class="pb-8 my-auto">
-            <h4 class="text-5xl text-[#121212] font-extrabold pb-5 md:text-center sm:text-center lg:text-start">Deal of the day</h4>
+            <h4 class="text-3xl md:text-5xl text-[#121212] font-extrabold pb-5 md:text-center sm:text-center lg:text-start">Deal of the day</h4>
             <p class="text-[#121212] font-medium text-[16px] md:text-center sm:text-center lg:text-start">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
           <div class="flex gap-8">
             <div class="text-center">
-            <h4 class="font-extrabold text text-5xl">29<span>:</span></h4>
+            <h4 class="font-extrabold text-2xl md:text-5xl">29<span>:</span></h4>
             <p class="text-[16px] font-medium text-[#121212]">Days</p>
             </div>
             <div class="text-center">
-              <h4 class="font-extrabold text text-5xl">15<span>:</span></h4>
+              <h4 class="font-extrabold text-2xl md:text-5xl">15<span>:</span></h4>
               <p class="text-[16px] font-medium text-[#121212]">Hours</p>
             </div>
             <div class="text-center">
-              <h4 class="font-extrabold text text-5xl">25<span>:</span></h4>
+              <h4 class="font-extrabold text-2xl md:text-5xl">25<span>:</span></h4>
               <p class="text-[16px] font-medium text-[#121212]">Minutes</p>
             </div>
             <div class="text-center">
-              <h4 class="font-extrabold text text-5xl">08</h4>
+              <h4 class="font-extrabold text-2xl md:text-5xl">08</h4>
               <p class="text-[16px] font-medium text-[#121212]">Seconds</p>
             </div>
           </div>
@@ -364,68 +364,69 @@
       </section>
       <!--why choose us section-->
       <section class="container mx-auto mt-24 mb-10">
-        <h3 class="text-[#121212] font-extrabold text-5xl pb-2 text-center">Why Choose Us</h3>
-        <p class="font-normal text-[#121212] text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
-        <div class="mt-10 flex justify-between">
-          <div class="box-1 space-y-10 flex-1 lg:flex-1 md:">
-            <div class="flex justify-between">
+        <h3 class="text-[#121212] font-extrabold text-4xl lg:text-5xl pb-2 text-center">Why Choose Us</h3>
+        <p class="font-normal text-[#121212] text-xs  sm:text-xs md:text-lg text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
+        <div class="mt-10 flex flex-col sm:flex-col md:flex-col lg:flex-row justify-center sm:justify-center md:justify-center lg:justify-between">
+          <div class="box-1 space-y-7 order-2 sm:order-2 sm:pt-5 md:order-2 lg:order-1">
+            <div class="flex justify-center gap-5 items-center flex-col sm:flex-col md:flex-col lg:flex-row space-y-2">
               <img src="./images/group 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
-              <div class="text-start">
-                <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Dedicated Team</h3>
-                <hr>
-                <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+              <div class="text-center sm:text-center md:text-center lg:text-start">
+              <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Dedicated Team</h3>
+              <div class="border-b-2 border-[#121212] w-[40%] mx-auto sm:w-[40%] lg:w-[100%] sm:mx-auto"></div>
+              <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
               </div>
             </div>
-            <div class="flex justify-between">
+            <div class="flex justify-center gap-5 items-center flex-col sm:flex-col md:flex-col lg:flex-row space-y-2">
               <img src="./images/love 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
-              <div class="text-start">
-                <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Fresh is Best</h3>
-                <hr>
-                <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+              <div class="text-center sm:text-center md:text-center lg:text-start">
+              <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Fresh is Best</h3>
+              <div class="border-b-2 border-[#121212] w-[40%] mx-auto sm:w-[40%] lg:w-[100%] sm:mx-auto"></div>
+              <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
               </div>
             </div>
-            <div class="flex justify-between">
+            <div class="flex justify-center gap-5 items-center flex-col sm:flex-col md:flex-col lg:flex-row space-y-2">
               <img src="./images/gift-box 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
-              <div class="text-start">
-                <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Gift Certificates</h3>
-                <hr>
+              <div class="text-center sm:text-center md:text-center lg:text-start">
+              <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Gift Certificates</h3>
+              <div class="border-b-2 border-[#121212] w-[40%] mx-auto sm:w-[40%] lg:w-[100%] sm:mx-auto"></div>
+              <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+          </div>
+          <div class="text-center mx-auto order-1 sm:order-1 md:order-1 lg:order-2">
+            <img class="box-2 w-[380px] h-[400px] py-2 object-cover rounded-lg sm:rounded-lg" src="./images/whychoose1.png" alt="">
+          </div>
+          <div class="box-3 space-y-7 order-3 sm:order-3 sm:pt-5 md:order-3  lg:order-3">
+            <div class="flex  justify-center gap-5 items-center flex-col sm:flex-col md:flex-col lg:flex-row-reverse space-y-2">
+              <img src="./images/fruit-1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
+              <div class="text-center sm:text-center md:text-center lg:text-end">
+                <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Integrated Supplier</h3>
+                <div class="border-b-2 border-[#121212] w-[40%] mx-auto sm:w-[40%] lg:w-[100%] sm:mx-auto"></div>
+                <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            <div class="flex justify-center gap-5 items-center flex-col sm:flex-col md:flex-col lg:flex-row-reverse space-y-2">
+              <img src="./images/ice-cream 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
+              <div class="text-center sm:text-center md:text-center lg:text-end">
+                <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Sustainable Practice</h3>
+                <div class="border-b-2 border-[#121212] w-[40%] mx-auto sm:w-[40%] lg:w-[100%] sm:mx-auto"></div>
+                <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            <div class="flex justify-center gap-5 items-center flex-col sm:flex-col md:flex-col lg:flex-row-reverse space-y-2">
+              <img src="./images/like 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
+              <div class="text-center sm:text-center md:text-center lg:text-end">
+                <h3 class="text-[#121212] font-extrabold text-2xl pb-2">The Benefits Only</h3>
+                <div class="border-b-2 border-[#121212] w-[40%] mx-auto sm:w-[40%] lg:w-[100%] sm:mx-auto"></div>
                 <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
               </div>
             </div>
           </div>
-          <div class="box-2 flex-1 lg:flex-1 md: mx-6">
-            <img class="w-[380px] h-[400px] mx-auto object-cover rounded-lg" src="./images/whychoose1.png" alt="">
           </div>
-            <div class="box-3 space-y-10 flex-1 lg:flex-1 md:">
-              <div class="flex justify-between">
-                <div class="text-end">
-                  <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Integrated Supplier</h3>
-                  <hr>
-                  <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
-                </div>
-                <img src="./images/group 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
-              </div>
-              <div class="flex justify-between">
-                <div class="text-end">
-                  <h3 class="text-[#121212] font-extrabold text-2xl pb-2">Sustainable Practice</h3>
-                  <hr>
-                  <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
-                </div>
-                <img src="./images/love 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
-              </div>
-              <div class="flex justify-between">
-                <div class="text-end">
-                  <h3 class="text-[#121212] font-extrabold text-2xl pb-2">The Benefits Only</h3>
-                  <hr>
-                  <p class="pt-2">Professional employees are there for you to pick<br> the most amazing and fresh fruits.</p>
-                </div>
-                <img src="./images/gift-box 1.png" class="w-[50px] h-[50px] bg-slate-300 rounded-full p-4" alt="">
-              </div>
-            </div>
         </div>
       </section>
     </main>
-    <footer class="bg-[#121212] py-28 text-center">
+    <footer class="bg-[#121212] py-28 mt-24 text-center">
       <div class="flex justify-center items-center">
         <img class="w-[50px] h-[50px] pr-2" src="./images/logo.png" alt="">
         <a class="text-4xl text-white lg:text-white md:text-white sm:text-white font-bold">Fruit Brust</a>
