added next features

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
       <section class="container mx-auto">
         <div>
           <div class="carousel w-full">
-            <div id="slide1" class="carousel-item relative w-full  lg:h-[calc(100vh-64px)] md:h-[calc(100vh-64px)] sm:h-[calc(100vh-64px)] bg-gradient-to-tr from-[#121212] to-slate-500 rounded-lg">
+            <div id="slide1" class="carousel-item relative w-full h-[calc(100vh-64px)]  lg:h-[calc(100vh-64px)] md:h-[calc(100vh-64px)] sm:h-[calc(100vh-64px)] bg-gradient-to-tr from-[#121212] to-slate-500 rounded-lg">
               <img src="./images/banner1.png" class="w-full h-full absolute object-cover mix-blend-overlay bg-cover" />
-              <div class="space-y-4  mx-auto text-center lg:pt-36 md:pt-12 sm:pt-12 z-40">
+              <div class="space-y-4  mx-auto text-center lg:pt-36 md:pt-12 sm:pt-12 pt-12 z-40">
                 <h1 class="font-lato lg:text-7xl md:text-4xl sm:text-2xl text-white font-extrabold">Exotic tastes at your <br>doorstep</h1>
                 <p class="font-poppins text-[#F3F3F3] md:text-base sm:text-sm font-poppins pr-16 pl-16">We supply highly quality organic products</p>
-                <button class="bg-[#F85559] text-white font-extrabold md:px-4 sm:px-3 md:py-3 sm:py-2 border-0 z-40 rounded-lg">Shop Now</button>
+                <button class="bg-[#F85559] text-white font-extrabold px-3 py-2 md:px-4  md:py-3  border-0 z-40 rounded-lg">Shop Now</button>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
@@ -146,10 +146,10 @@
       </section>
       <!--time tracker section-->
       <section class="container mx-auto lg:mt-40 md:mt-20 sm:mt-20">
-        <div class="flex lg:flex-row md:flex-col sm:flex-col lg:justify-between md:justify-center md:items-center sm:justify-center sm:items-center">
+        <div class="flex flex-col lg:flex-row md:flex-col sm:flex-col lg:justify-between md:justify-center md:items-center justify-center items-center">
           <div class="pb-8 my-auto">
-            <h4 class="text-3xl md:text-5xl text-[#121212] font-extrabold pb-5 md:text-center sm:text-center lg:text-start">Deal of the day</h4>
-            <p class="text-[#121212] font-medium text-[16px] md:text-center sm:text-center lg:text-start">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
+            <h4 class="text-3xl md:text-5xl text-[#121212] font-extrabold pb-5 pt-10 md:text-center text-center lg:text-start">Deal of the day</h4>
+            <p class="text-[#121212] font-medium text-[16px] md:text-center text-center lg:text-start">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br> Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
           <div class="flex gap-8">
             <div class="text-center">
